--- a/standalone-frontend/base.html
+++ b/standalone-frontend/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://github.com/Ngabo-bajo/chatbot/blob/main/standalone-frontend/style.css">
 
 <head>
     <meta charset="UTF-8">
