changing url of static files

--- a/standalone-frontend/base.html
+++ b/standalone-frontend/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="https://github.com/Ngabo-bajo/chatbot/blob/main/standalone-frontend/style.css">
+<link rel="stylesheet" href="https://raw.githubusercontent.com/Ngabo-bajo/chatbot/main/standalone-frontend/style.css">
 
 <head>
     <meta charset="UTF-8">
@@ -28,12 +28,12 @@
             </div>
         </div>
         <div class="chatbox__button">
-            <button><img src="./images/chatbox-icon.svg" /></button>
+            <button><img src="https://raw.githubusercontent.com/Ngabo-bajo/chatbot/main/standalone-frontend/images/chatbox-icon.svg" /></button>
         </div>
     </div>
 </div>
 
-    <script src="./app.js"></script>
+    <script src="https://raw.githubusercontent.com/Ngabo-bajo/chatbot/main/standalone-frontend/app.js"></script>
 
 </body>
 </html>
